--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@rnhooks/keyboard": "^0.0.3",
+    "firebase": "^7.17.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-picker": "^2.3.3",
+    "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
-    "react-native-view-more-text": "^2.1.0"
+    "react-native-view-more-text": "^2.1.0",
+    "react-redux": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
