--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rnhooks/keyboard": "^0.0.3",
     "firebase": "^7.17.1",
     "react": "16.13.1",
+    "react-content-loader": "^5.1.0",
     "react-native": "0.63.2",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
